1.重构文件